0x01-variables_if_else_while/1-last_digit.c:
st_digit.c:14:2: error: ISO C90 forbids mixed declarations and code [-Werror=declaration-after-statement]
   14 |  char output[] = "Last digit of n is ";
      |  ^~~~
cc1: all warnings being treated as errors
